v8.1
-----


v8.0.1
-----
: Fixed a bug that would cause users with less than 250 badges to not see badge calculations (thanks judgegr!)
: Fixed a bug that caused badge completion costs to not show correctly on badge pages
: Fixed a bug that caused the Enhanced Steam menu to be placed incorrectly due to a page layout change
: Fixed a bug that caused the "Install Steam" button to partially dispear when "Hide About" option enabled

v8.0
-----
+ Added lowest price and price history information for WinGameStore and GameBillet
+ Added a menu option for logged in users to send their Steam collection info to IsThereAnyDeal.com
: Fixed a bug that caused tags not to display correctly on wishlist pages
: Fixed bugs relating to changes Valve made in the badge page layout
: Updated Greenlight caching to be more efficient
: Fixed a tag layout issue on the homepage
- Removed lowest price and price history information for the Desura store

v7.9.2
-----
: Fixed layout issues with the market page

v7.9.1
-----
: Links on app pages to SteamDB, PCGW, and SCE will display at the top of the right column
: Continuous scrolling was updated and will now reset after changing the search sort order
: Homepage carousel will now properly display escaped HTML characters
: Updated Early Access banners to run more efficiently
: Relisting a market item can now be done quickly by typing in the amount and pressing enter
: Regional price comparison boxes were resized and placed correctly on store pages
: Fixed an alignment issue with bundle prices
: Fixed an issue where there was no preview popup on greenlight items loaded through continuous scrolling
: Dynamic Greenlight data will now be cached in the browser
: Astats and Steamgifts links will now force a non-SSL connection as those sites don't support SSL
: Fixed a bug that caused bundle notifications not to appear on non-English store pages

v7.9
-----
+ Added an option to sort your friends page by their time last online